# reinigungsservice-backend

./: .env.dev  .gitignore  .sample.env  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 10f99a06f499_change_hours_column_from_decimal_to_.py  3f4159fff59e_create_user_table.py  639c21097b94_.py  8ce9c571c664_.py  bb1822c17f23_.py  cda8db2ce2af_.py
app/: config.py  dependencies.py  dtos.py  main.py  utils.py
app/api/: __init__.py  controllers.py  dependencies.py
app/database/: config.py  orm.py
app/db/: config.py  repositories.py  tables.py
app/domain/: engine.py
app/models/: address.py  bank_account.py  blacklisted_token.py  customer.py  employee.py  refresh_token.py  user.py  work.py
app/repositories/: __init__.py  base_repository.py  blacklisted_token_repository.py  customer_repository.py  employee_repository.py  refresh_token_repository.py  user_repository.py  work_repository.py
app/schemas/: addresses.py  auth.py  customers.py  employees.py  invoices.py  works.py
app/scripts/: create_user.py  seed_db.py
app/services/: auth_service.py  customer_service.py  employee_service.py  google_drive_service.py  invoices_service.py  seed_db_service.py  work_service.py
src/: config.py  dtos.py  main.py  utils.py
src/alembic/: env.py
src/api/: controllers.py  dependencies.py
src/data/: seed_dev.json
src/db/: config.py  repositories.py  tables.py
src/domain/: models.py
src/scripts/: seed_db.py  (+1 more)
tests/: test_services.py
(+21 files in other folders)
